--- a/css/style-blue.css
+++ b/css/style-blue.css
@@ -1,4 +1,3 @@
-/* $primary-color: #0e94c9;*/
 @font-face {
   font-family: 'Montserrat';
   src: url("../fonts/Montserrat-Light.otf");
@@ -29,7 +28,7 @@ body {
 
 /* TYPOGRPAHY */
 a {
-  color: #319865;
+  color: #0b90c5;
   line-height: inherit;
   text-decoration: none; }
 
@@ -45,7 +44,7 @@ a:hover, a:focus {
   line-height: 1;
   margin-bottom: 0.625rem;
   font-family: "Montserrat", Helvetica, sans-serif;
-  color: #319865;
+  color: #0b90c5;
   text-transform: uppercase;
   font-weight: normal; }
 
@@ -84,7 +83,7 @@ header div.logo img {
   */ }
 
 .single-cover .overlay {
-  background: rgba(49, 152, 101, 0.85);
+  background: rgba(11, 144, 197, 0.85);
   height: 100%;
   width: 100%;
   top: 0;
@@ -114,7 +113,7 @@ header div.logo img {
   font-weight: 300; }
 
 .top-bar-section ul li:hover:not(.has-form) > a {
-  background-color: #319865; }
+  background-color: #0b90c5; }
 
 .top-bar-section li:not(.has-form) a:not(.button) {
   line-height: 2.8125rem;
@@ -122,7 +121,7 @@ header div.logo img {
 
 .top-bar-section .has-dropdown > a::after {
   font-family: 'FontAwesome';
-  color: #319865;
+  color: #0b90c5;
   content: '\f078';
   line-height: 1px;
   font-size: 0.7em; }
@@ -173,7 +172,7 @@ header div.logo img {
   border-bottom: none; }
 
 .top-bar .toggle-topbar.menu-icon a {
-  color: #319865;
+  color: #0b90c5;
   padding: 0;
   position: relative;
   font-family: "Montserrat", Helvetica, sans-serif; }
@@ -183,7 +182,7 @@ header div.logo img {
   box-shadow: none;
   font-family: 'FontAwesome';
   content: '\f0c9';
-  color: #319865;
+  color: #0b90c5;
   font-size: 1.8em; }
 
 .top-bar-section ul li {
@@ -210,7 +209,7 @@ header div.logo img {
 .nav-wrapper nav.top-bar li.current-menu-item,
 .nav-wrapper nav.top-bar li.current-menu-ancestor,
 .nav-wrapper nav.top-bar li.current-menu-parent {
-  background: #319865; }
+  background: #0b90c5; }
 
 .nav-wrapper nav.top-bar li.current-menu-item a,
 .nav-wrapper nav.top-bar li.current-menu-ancestor a,
@@ -224,7 +223,7 @@ header div.logo img {
   font-size: 0.7em; }
 
 .top-bar-section .current-menu-item.has-dropdown > a:hover::after, .top-bar-section .current-menu-ancestor.has-dropdown > a:hover::after, .top-bar-section .current-menu-parent.has-dropdown > a:hover::after {
-  color: #921914; }
+  color: #004f7e; }
 
 /* SLIDER */
 .slider-wrapper {
@@ -326,10 +325,10 @@ header div.logo img {
   font-size: 0.7rem; }
 
 .slider-wrapper .slider-caption .panel .post-item-title a {
-  color: #921914; }
+  color: #004f7e; }
 
 .slider-wrapper .slider-caption .panel .post-item-title a:hover {
-  color: #319865; }
+  color: #0b90c5; }
 
 .orbit-bullets {
   display: block;
@@ -352,10 +351,10 @@ header div.logo img {
   margin-right: 6px;
   width: 0.8rem;
   border-radius: 1000px;
-  border: solid 1px #921914; }
+  border: solid 1px #004f7e; }
 
 .orbit-bullets li.active {
-  background: #921914;
+  background: #004f7e;
   border: none; }
 
 .orbit-container .orbit-timer {
@@ -390,20 +389,20 @@ footer .socials ul li a:hover {
   border: solid 1px #020d16; }
 
 header .socials ul li a {
-  color: #319865;
+  color: #0b90c5;
   font-size: 15px;
   width: 36px;
   height: 36px;
   -moz-border-radius: 18px;
   -webkit-border-radius: 18px;
   border-radius: 18px;
-  border: solid 1px #319865;
+  border: solid 1px #0b90c5;
   display: block; }
 
 header .socials ul li a:hover {
-  color: #921914;
+  color: #004f7e;
   text-align: center;
-  border: solid 1px #921914; }
+  border: solid 1px #004f7e; }
 
 header .nav-wrapper, header .socials {
   /*margin-top:15px;*/ }
@@ -544,7 +543,7 @@ header .socials {
 
 /* BUTTONS */
 .button, button {
-  background-color: #319865;
+  background-color: #0b90c5;
   font-family: "Montserrat", Helvetica, sans-serif; }
 
 button.small, .button.small {
@@ -552,7 +551,7 @@ button.small, .button.small {
   font-size: 0.8125rem; }
 
 button:hover, button:focus, .button:hover, .button:focus {
-  background-color: #921914; }
+  background-color: #004f7e; }
 
 article .panel .button {
   border-radius: 5px;
@@ -598,12 +597,12 @@ article .panel .button {
   font-size: 0.7rem; }
 
 .main-column .call-to-action .button.small {
-  background: #921914;
+  background: #004f7e;
   margin-left: 20px;
   margin-top: 10px; }
 
 .main-column .call-to-action .button.small:hover {
-  background: #319865; }
+  background: #0b90c5; }
 
 /* MAIN COLUMN */
 .main-column {
@@ -628,10 +627,10 @@ article.post-item .post-item-title {
   font-weight: 300; }
 
 article.post-item .post-item-title a {
-  color: #921914; }
+  color: #004f7e; }
 
 article.post-item .post-item-title a:hover {
-  color: #319865; }
+  color: #0b90c5; }
 
 article .post-item-date span {
   display: block; }
@@ -669,13 +668,13 @@ article .panel {
 
 .category-title {
   font-family: "Montserrat", Helvetica, sans-serif;
-  color: #921914;
+  color: #004f7e;
   text-transform: uppercase;
   padding: 0px;
   font-weight: 300; }
 
 .category-title-line {
-  background: #921914;
+  background: #004f7e;
   height: 1px;
   margin-top: 1.2em; }
 
@@ -802,7 +801,7 @@ footer a.back-to-top {
   -webkit-border-radius: 30px;
   border-radius: 30px;
   color: #FFF;
-  background: #319865;
+  background: #0b90c5;
   position: fixed;
   text-align: center;
   line-height: 60px;
@@ -811,9 +810,9 @@ footer a.back-to-top {
   font-size: 2em; }
 
 footer a.back-to-top:hover {
-  color: #319865;
+  color: #0b90c5;
   background: #fff;
-  border: solid 1px #319865; }
+  border: solid 1px #0b90c5; }
 
 footer a#back-to-top {
   opacity: 1;
@@ -839,7 +838,7 @@ aside .widget-title {
   text-transform: uppercase;
   display: block;
   margin-bottom: 15px;
-  background: #921914; }
+  background: #004f7e; }
 
 aside .widget_search .widget-title {
   padding: 0px;
@@ -848,9 +847,9 @@ aside .widget_search .widget-title {
   background: none; }
 
 aside .widget_search {
-  background: #319865;
+  background: #0b90c5;
   padding: 5px 10px 0px 15px;
-  border: solid 1px #319865; }
+  border: solid 1px #0b90c5; }
 
 aside .widget_search button {
   font-size: 1.4em; }
@@ -915,7 +914,7 @@ aside .recent-posts-box ul li:last-child {
 .widget ul li a:before {
   font-family: "FontAwesome";
   content: '\f054';
-  color: #319865;
+  color: #0b90c5;
   padding-right: 10px; }
 
 .widget ul li a {
@@ -930,7 +929,7 @@ aside .recent-posts-box ul li a {
   font-size: 0.8em; }
 
 .widget ul li a:hover {
-  color: #319865; }
+  color: #0b90c5; }
 
 /* SINGLE POST */
 .single-row {
@@ -1008,7 +1007,7 @@ aside .recent-posts-box ul li a {
 
 .single-row article.post-item .post-content ol li:before {
   content: counter(li) ".";
-  color: #319865;
+  color: #0b90c5;
   display: inline-block;
   width: 1em;
   font-weight: bold;
@@ -1020,7 +1019,7 @@ aside .recent-posts-box ul li a {
 .single-row article.post-item .post-content ul li:before {
   font-family: "FontAwesome";
   content: '\f054';
-  color: #319865;
+  color: #0b90c5;
   padding-right: 1em;
   font-size: 0.7em;
   height: 10px;
@@ -1030,7 +1029,7 @@ aside .recent-posts-box ul li a {
 
 .single-row article.post-item blockquote {
   background: #efefef;
-  border-left: 5px solid #319865;
+  border-left: 5px solid #0b90c5;
   padding: 5px 10px 5px 20px;
   margin-bottom: 10px; }
 
@@ -1081,7 +1080,7 @@ article .post-item-date {
   color: #FFFFFF; }
 
 .single-row article.post-item .bottom-line {
-  border-bottom: 10px solid #319865;
+  border-bottom: 10px solid #0b90c5;
   margin-bottom: 10px; }
 
 .single-row article.post-item .post-item-title {
@@ -1113,10 +1112,10 @@ article .post-item-date {
   font-size: 0.7em; }
 
 .breadcrumbs a {
-  color: #319865; }
+  color: #0b90c5; }
 
 .breadcrumbs a:hover {
-  color: #319865; }
+  color: #0b90c5; }
 
 /* ARCHIVES */
 .category-row.archive-row .category-title, .category-row.archive-row .category-title-line, .not-found,
@@ -1133,7 +1132,7 @@ table {
   width: 100%; }
 
 table thead tr th {
-  background-color: #319865;
+  background-color: #0b90c5;
   color: white;
   text-transform: uppercase;
   font-family: "Montserrat", Helvetica, sans-serif; }
@@ -1177,7 +1176,7 @@ img.alignright {
     font-size: 0.8em; }
 
   .slider-wrapper .slider-caption .panel .post-item-title a:hover {
-    color: #319865; }
+    color: #0b90c5; }
 
   .main-nav > li {
     border-left: none; }
@@ -1215,7 +1214,7 @@ img.alignright {
     */ }
 
   .top-bar-section ul li:hover:not(.has-form) > a {
-    color: #319865; }
+    color: #0b90c5; }
 
   .nav-wrapper nav {
     border: none; }
@@ -1235,14 +1234,14 @@ img.alignright {
     content: '\f053';
     font-size: 0.8em;
     border: none;
-    color: #319865;
+    color: #0b90c5;
     padding-right: 10px; }
 
   .top-bar-section .dropdown li.title.back h5 a {
     color: #FFF; }
 
   .top-bar-section .dropdown li.title h5 a, .top-bar-section .dropdown li.parent-link a {
-    color: #319865;
+    color: #0b90c5;
     display: block; }
 
   .top-bar-section .has-dropdown > a::after {
@@ -1314,7 +1313,7 @@ img.alignright {
     padding-right: 0px; }
 
   .top-bar-section ul li > a {
-    color: #319865; }
+    color: #0b90c5; }
 
   footer .copyright {
     font-size: 0.9em;
@@ -1342,7 +1341,7 @@ img.alignright {
     top: 5px; } }
 /* COLORS */
 footer {
-  background: #319865; }
+  background: #0b90c5; }
 
 header {
   display: block;
@@ -1399,7 +1398,7 @@ header {
   display: inline-block;
   padding: 5px 10px;
   margin: 0 2px 0 0;
-  border: 1px solid #319865;
+  border: 1px solid #0b90c5;
   line-height: 1;
   text-decoration: none;
   border-radius: 2px;
@@ -1408,18 +1407,18 @@ header {
 
 .page-numbers.current,
 a.page-numbers:hover {
-  background: #319865;
+  background: #0b90c5;
   color: #FFF; }
 
 span.page-numbers.dots {
-  color: #319865; }
+  color: #0b90c5; }
 
 .pagination-wrapper {
   margin: 15px 0px; }
 
 ul.pagination li.current a,
 ul.pagination li.current button {
-  background: #319865; }
+  background: #0b90c5; }
 
 ul.pagination li a, ul.pagination li {
   font-size: 1em;
@@ -1448,7 +1447,7 @@ ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.paginatio
   line-height: 0.6em; }
 
 .event-widget .day {
-  color: #319865;
+  color: #0b90c5;
   line-height: 0.8;
   letter-spacing: -4px;
   text-align: center; }
@@ -1460,7 +1459,7 @@ ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.paginatio
   color: #c9c9c9; }
 
 .event-widget .full-day {
-  color: #319865;
+  color: #0b90c5;
   font-weight: 300; }
 
 .event-widget p.description {
@@ -1476,7 +1475,7 @@ ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.paginatio
   font-size: 1rem; }
 
 .event-widget .description a:hover {
-  color: #921914; }
+  color: #004f7e; }
 
 /* MISCELLANEOUS */
 figure {
@@ -1750,4 +1749,4 @@ meta.foundation-mq-topbar {
     display: block;
     position: absolute !important; } }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style-blue.css.map */
