--- a/css/style.css
+++ b/css/style.css
@@ -1230,21 +1230,6 @@ img.alignright {
   .main-nav > li {
     border-left: none; }
 
-  .top-bar-section .dropdown li.title.back h5 a::before {
-    font-family: "FontAwesome";
-    content: '\f053';
-    font-size: 0.8em;
-    border: none;
-    color: #319865;
-    padding-right: 10px; }
-
-  .top-bar-section .dropdown li.title.back h5 a {
-    color: #FFF; }
-
-  .top-bar-section .dropdown li.title h5 a, .top-bar-section .dropdown li.parent-link a {
-    color: #319865;
-    display: block; }
-
   .top-bar-section .has-dropdown > a::after {
     font-family: "FontAwesome";
     content: '\f054';
@@ -1621,7 +1606,7 @@ meta.foundation-mq-topbar {
 
   .top-bar-section .has-dropdown > a:after {
     border: none;
-    content: "";
+    /*content: "";*/
     display: block;
     height: 0;
     width: 0;
@@ -1749,5 +1734,19 @@ meta.foundation-mq-topbar {
     clip: auto;
     display: block;
     position: absolute !important; } }
+.top-bar-section .dropdown li.title.back a::before {
+  font-family: "FontAwesome";
+  content: '\f053';
+  font-size: 0.8em;
+  border: none;
+  color: #319865;
+  padding-right: 10px; }
+
+.top-bar-section .dropdown li.title.back a {
+  color: #319865; }
+
+.top-bar-section .dropdown li.title h5 a, .top-bar-section .dropdown li.parent-link a {
+  color: #319865;
+  display: block; }
 
 /*# sourceMappingURL=style.css.map */
