--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,8 @@ header div.logo img {
   height: 100%;
   width: 100%;
   top: 0;
-  left: 0; }
+  left: 0;
+  min-height: 120px; }
 
 .single-cover .title.center {
   text-align: center;
@@ -317,9 +318,9 @@ header .socials ul li a {
   display: block; }
 
 header .socials ul li a:hover {
-  color: #921914;
+  color: #020d16;
   text-align: center;
-  border: solid 1px #921914; }
+  border: solid 1px #020d16; }
 
 header .nav-wrapper, header .socials {
   /*margin-top:15px;*/ }
