--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1195,6 +1195,12 @@ article.columns + article.columns:last-child {
 }
 
 
+.post-list.not-found ul {
+    -webkit-column-count: 3;
+       -moz-column-count: 3;
+            column-count: 3; 
+}
+
 /*
 ================================================================================================
 13.0 - Content (Events)
